[tool.poetry]
name        = "cloud-storage"
version     = "0.0.1"
description = "Cloud Storage access"
authors     = ["Unai Garay Maestre"]
packages = [
    { include = "cloud_storage" }
]

[tool.poetry.dependencies]
python                  = { version = ">= 3.9, <= 3.11" }
google-cloud-storage    = { version = ">=2.7.0" }
protobuf                = { version = "==3.20.1" }

# dev
black                   = { version = ">=22.10.0", optional = true }

[tool.poetry.extras]

dev = ["black"]

[build-system]
requires        = [
    "poetry-core>=1.0.0",
    "setuptools"  # for pip install -e
]
build-backend   = "poetry.core.masonry.api"
